--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 @font-face {
   font-family: gilroy;
   src: url(fonts/Gilroy-Medium.ttf);
@@ -6,6 +13,7 @@
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   font-family: gilroy;
   text-transform: capitalize;
@@ -17,7 +25,6 @@
 *:before,
 *:after {
   -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -125,6 +132,8 @@
 }
 
 #menu__toggle:checked ~ .menu__btn > .hamburger {
+  -webkit-transition: 0.4s ease;
+  -o-transition: 0.4s ease;
   transition: 0.4s ease;
 }
 
@@ -132,7 +141,6 @@
   right: 0;
   visibility: visible;
   -webkit-transition: 0.5s ease-in-out;
-  -moz-transition: 0.5s ease-in-out;
   -o-transition: 0.5s ease-in-out;
   transition: 0.5s ease-in-out;
 }
@@ -143,7 +151,11 @@
   right: 20px;
   width: 30px;
   height: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   cursor: pointer;
   z-index: 1000;
@@ -159,17 +171,26 @@
   right: -100%;
   width: 300px;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
   align-items: start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
   justify-content: start;
   list-style: none;
   padding: 60px 20px;
   /* background-color: var(--header-bg); */
-  background-image: -webkit-linear-gradient(top, rgb(15, 15, 15), rgb(36, 94, 135) 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgb(15, 15, 15)), to(rgb(36, 94, 135)));
+  background-image: -o-linear-gradient(top, rgb(15, 15, 15), rgb(36, 94, 135) 100%);
   background-image: linear-gradient(to bottom, rgb(15, 15, 15), rgb(36, 94, 135) 100%);
   -webkit-transition: 0.5s ease-in-out;
-  -moz-transition: 0.5s ease-in-out;
   -o-transition: 0.5s ease-in-out;
   transition: 0.5s ease-in-out;
 }
@@ -187,6 +208,8 @@
   color: #fff;
 }
 .search-box {
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   gap: 30px;
   width: 100%;
@@ -200,6 +223,26 @@
   background-color: transparent;
   width: 100%;
 }
+.search::-webkit-input-placeholder {
+  font-size: 1rem;
+  letter-spacing: 0px;
+  color: #fff;
+}
+.search::-moz-placeholder {
+  font-size: 1rem;
+  letter-spacing: 0px;
+  color: #fff;
+}
+.search:-ms-input-placeholder {
+  font-size: 1rem;
+  letter-spacing: 0px;
+  color: #fff;
+}
+.search::-ms-input-placeholder {
+  font-size: 1rem;
+  letter-spacing: 0px;
+  color: #fff;
+}
 .search::placeholder {
   font-size: 1rem;
   letter-spacing: 0px;
@@ -210,13 +253,20 @@
   right: -60px;
   bottom: 30px;
   z-index: 350;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   width: 50px;
   height: 50px;
   border-radius: 50%;
   background-color: rgba(var(--bgcolor-white-rgb), 0.9);
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.17);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.17);
   color: var(--color-gray-800);
   font-size: 16px;
@@ -224,12 +274,18 @@
   pointer-events: none;
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
+  -webkit-transform: translateX(100%);
+  -ms-transform: translateX(100%);
   transform: translateX(100%);
+  -webkit-transition: all ease 0.7s;
+  -o-transition: all ease 0.7s;
   transition: all ease 0.7s;
 }
 .circle__up.button-show {
   opacity: 1;
   right: 60px;
+  -webkit-transform: none;
+  -ms-transform: none;
   transform: none;
   pointer-events: visible;
 }
@@ -259,8 +315,14 @@
 }
 .xtemos-demos-preview-wrapper a {
   color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   gap: 6px;
 }
@@ -271,8 +333,14 @@
   padding: 0 20px;
 }
 .display-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 header {
@@ -284,6 +352,8 @@ header {
   width: 100%;
 }
 .woodmart-header {
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   padding: 5px 0;
 }
@@ -304,8 +374,14 @@ ul {
   background-position: center;
 }
 .hero-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   position: relative;
 }
@@ -317,12 +393,22 @@ ul {
   color: var(--btn-accented-bgcolor);
 }
 .left-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
   justify-content: start;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
   align-items: start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   gap: 30px;
   padding: 10rem 0 8rem 0;
+  -ms-flex-preferred-size: 60%;
   flex-basis: 60%;
 }
 .input {
@@ -333,6 +419,18 @@ ul {
   outline: none;
   border-radius: 5px;
   margin: 0 7px;
+}
+.input::-webkit-input-placeholder {
+  font-size: 1rem;
+}
+.input::-moz-placeholder {
+  font-size: 1rem;
+}
+.input:-ms-input-placeholder {
+  font-size: 1rem;
+}
+.input::-ms-input-placeholder {
+  font-size: 1rem;
 }
 .input::placeholder {
   font-size: 1rem;
@@ -367,6 +465,8 @@ span {
   opacity: 0.8;
 }
 .swiper-wrapper {
+  -webkit-transition-timing-function: linear;
+  -o-transition-timing-function: linear;
   transition-timing-function: linear;
 }
 .swiper-container {
@@ -377,9 +477,18 @@ span {
   position: relative;
 }
 .swiper-slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   gap: 20px;
 }
@@ -390,7 +499,11 @@ span {
   color: #ffffff;
   font-size: 2rem;
   letter-spacing: -1px;
+  -webkit-transform: translateY(-5%) scale(0.8);
+  -ms-transform: translateY(-5%) scale(0.8);
   transform: translateY(-5%) scale(0.8);
+  -webkit-transition: 1s ease;
+  -o-transition: 1s ease;
   transition: 1s ease;
   text-transform: uppercase;
   text-shadow: 0 5px 5px rgba(0, 0, 0, 0.01);
@@ -403,7 +516,11 @@ span {
 
 .swiper-slide.swiper-slide-active h2 {
   opacity: 1;
+  -webkit-transform: translateY(0%) scale(1);
+  -ms-transform: translateY(0%) scale(1);
   transform: translateY(0%) scale(1);
+  -webkit-transition: 1s ease;
+  -o-transition: 1s ease;
   transition: 1s ease;
 }
 .my_skills {
@@ -415,11 +532,13 @@ span {
   color: #fff;
 }
 .my_experience {
-  background-image: -webkit-linear-gradient(top, rgb(15, 15, 15), rgb(36, 94, 135) 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgb(15, 15, 15)), to(rgb(36, 94, 135)));
+  background-image: -o-linear-gradient(top, rgb(15, 15, 15), rgb(36, 94, 135) 100%);
   background-image: linear-gradient(to bottom, rgb(15, 15, 15), rgb(36, 94, 135) 100%);
 }
 .my_work_experience {
   gap: 50px;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   padding: 100px 0;
 }
@@ -444,7 +563,12 @@ span {
 }
 .concepts {
   color: #fff;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
   align-items: start;
   width: 230px;
   gap: 10px;
@@ -466,18 +590,19 @@ span {
 }
 .box img {
   /* position: absolute; */
+  -o-object-fit: cover;
   object-fit: cover;
   width: 100%;
   height: 100%;
   left: 0;
   -webkit-transition: all 300ms ease-out;
-  -moz-transition: all 300ms ease-out;
   -o-transition: all 300ms ease-out;
-  -ms-transition: all 300ms ease-out;
   transition: all 300ms ease-out;
 }
 
 .box .overbox {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(15, 15, 15, 0.411)), to(rgba(1, 6, 9, 0.573)));
+  background-image: -o-linear-gradient(top, rgba(15, 15, 15, 0.411), rgba(1, 6, 9, 0.573) 100%);
   background-image: linear-gradient(to bottom, rgba(15, 15, 15, 0.411), rgba(1, 6, 9, 0.573) 100%);
   position: absolute;
   top: 0;
@@ -485,9 +610,7 @@ span {
   color: #fff;
   z-index: 1;
   -webkit-transition: all 300ms ease-out;
-  -moz-transition: all 300ms ease-out;
   -o-transition: all 300ms ease-out;
-  -ms-transition: all 300ms ease-out;
   transition: all 300ms ease-out;
   opacity: 0;
   width: 100%;
@@ -501,9 +624,7 @@ span {
 }
 .box .overtext {
   -webkit-transition: all 300ms ease-out;
-  -moz-transition: all 300ms ease-out;
   -o-transition: all 300ms ease-out;
-  -ms-transition: all 300ms ease-out;
   transition: all 300ms ease-out;
   text-align: center;
 }
@@ -512,7 +633,11 @@ span {
   margin-top: 50px;
   text-transform: uppercase;
   opacity: 0;
+  -webkit-transition-delay: 0.1s;
+  -o-transition-delay: 0.1s;
   transition-delay: 0.1s;
+  -webkit-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
   transition-duration: 0.2s;
 }
 .box:hover .title,
@@ -525,7 +650,11 @@ span {
   font-size: 0.8rem;
   opacity: 0;
   margin-bottom: 50px;
+  -webkit-transition-delay: 0.2s;
+  -o-transition-delay: 0.2s;
   transition-delay: 0.2s;
+  -webkit-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
   transition-duration: 0.2s;
 }
 .box:hover .tagline,
@@ -537,7 +666,12 @@ span {
   scale: 1.2;
 }
 .my-portfolio {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
   align-items: start;
   gap: 50px;
 }
@@ -546,10 +680,13 @@ span {
 }
 
 .portfolio-left {
+  -ms-flex-preferred-size: 20%;
   flex-basis: 20%;
 }
 .portfolio-right {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 20px 1fr;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
 }
@@ -558,6 +695,8 @@ span {
 
   border: 1px solid var(--btn-accented-bgcolor-hover);
   border-radius: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 10px;
 }
@@ -576,7 +715,8 @@ span {
   opacity: 0.7;
 }
 .introduction_page {
-  background-image: -webkit-linear-gradient(top, rgb(15, 15, 15), rgb(36, 94, 135) 100%);
+  background-image: -webkit-gradient(linear, left bottom, left top, from(rgb(15, 15, 15)), to(rgb(36, 94, 135)));
+  background-image: -o-linear-gradient(bottom, rgb(15, 15, 15), rgb(36, 94, 135) 100%);
   background-image: linear-gradient(to top, rgb(15, 15, 15), rgb(36, 94, 135) 100%);
   /* height: 200dvh; */
   color: #fff;
@@ -652,15 +792,27 @@ input[type="checkbox"] {
   gap: 100px;
 }
 .greeting {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   gap: 30px;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
   align-items: start;
+  -ms-flex-preferred-size: 35%;
   flex-basis: 35%;
 }
 .questions {
+  -ms-flex-preferred-size: 50%;
   flex-basis: 50%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   gap: 30px;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
   align-items: start;
 }
 .me {
@@ -706,8 +858,14 @@ input[type="checkbox"] {
   -o-transition-timing-function: linear !important;
   transition-timing-function: linear !important;
   padding: 100px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   gap: 60px;
 }
@@ -724,11 +882,16 @@ input[type="checkbox"] {
   width: 80%;
   border-radius: 20px;
   padding: 0 20px;
-  background-image: -webkit-linear-gradient(left, rgb(60, 56, 255), rgb(27, 179, 244) 100%);
+  background-image: -webkit-gradient(linear, left top, right top, from(rgb(60, 56, 255)), to(rgb(27, 179, 244)));
+  background-image: -o-linear-gradient(left, rgb(60, 56, 255), rgb(27, 179, 244) 100%);
   background-image: linear-gradient(to right, rgb(60, 56, 255), rgb(27, 179, 244) 100%);
 }
 .contact-me {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   gap: 30px;
   padding: 50px 0;
@@ -742,6 +905,8 @@ input[type="checkbox"] {
   text-align: center;
 }
 .footer-header {
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   border-bottom: 1px solid var(--color-gray-700);
   padding: 10px 0;
