--- a/style.css
+++ b/style.css
@@ -569,11 +569,11 @@ span {
 .portfolio-section {
   align-items: start;
   justify-content: space-between;
-  padding: 100px 0;
+  padding: 100px 50px;
   background-color: white;
   gap: 30px;
   position: relative;
-  /* display: none; */
+ 
 }
 .box {
   cursor: pointer;
@@ -581,6 +581,7 @@ span {
   position: relative;
   overflow: hidden;
   border-radius: 10px;
+  width: 100%;
 }
 .box img {
   /* position: absolute; */
@@ -588,7 +589,6 @@ span {
   object-fit: cover;
   width: 100%;
   height: 100%;
-  left: 0;
   -webkit-transition: all 300ms ease-out;
   -o-transition: all 300ms ease-out;
   transition: all 300ms ease-out;
@@ -676,12 +676,12 @@ span {
   gap: 50px;
 }
 .my-portfolio h1 {
-  font-size: 1.5rem;
+  font-size: 3rem;
 }
 
 .portfolio-left {
   -ms-flex-preferred-size: 20%;
-  flex-basis: 20%;
+  flex-basis: 30%;
 }
 .portfolio-right {
   display: -ms-grid;
@@ -689,7 +689,7 @@ span {
   -ms-grid-columns: 1fr 20px 1fr;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
-  /* width: 100%; */
+
 }
 .contact-btn {
   padding: 10px 15px;
