--- a/style.css
+++ b/style.css
@@ -1,15 +1,13 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.4.14,
-* Autoprefixer: v10.4.7
-* Browsers: last 4 version
-*/
+
 
 @font-face {
   font-family: gilroy;
   src: url(fonts/Gilroy-Medium.ttf);
 }
 
+html {
+  scroll-behavior: smooth;
+}
 * {
   margin: 0;
   padding: 0;
@@ -126,7 +124,10 @@
   --brdcolor-gray-400: rgba(0, 0, 0, 0.12);
   --brdcolor-gray-500: rgba(0, 0, 0, 0.2);
 }
-
+a{
+  color: white;
+  font-weight: 900;
+}
 #menu__toggle {
   opacity: 0;
 }
